refactor subjectpool template naming and locations
Making template names consistent and moving subjectpool templates into
their own dedicated dir and namespace. Also refactoring decorator and
template tags usage.

--- a/vcweb/core/subjectpool/templates/subjectpool/experiment-session-detail.html
+++ b/vcweb/core/subjectpool/templates/subjectpool/experiment-session-detail.html
@@ -15,6 +15,7 @@
             {{ session_detail.scheduled_end_date.time }}</p>
             <p><strong>Location: </strong> {{ session_detail.location }}</p>
             <p><strong>Capacity: </strong> {{ session_detail.capacity }}</p>
+            <p><strong>Waitlist enabled: </strong> {{ session_detail.waitlist }}</p>
         </div>
         <div class="alert alert-warning">
             {% if formset.forms|length > 0 %}
