--- a/vcweb/core/templates/includes/nav-menu.html
+++ b/vcweb/core/templates/includes/nav-menu.html
@@ -3,7 +3,7 @@
 
 {% url 'home' as home %}
 {% url 'about' as about %}
-{% url 'contact' as contact %}
+{% url 'contact_form' as contact %}
 {% url 'core:login' as login %}
 {% url 'core:logout' as logout %}
 {% url 'core:register' as register %}
@@ -15,14 +15,14 @@
         <div class='container'>
             <ul class='nav'>
                 {% block headerlinks %}
-                <li class='{% active request home %}' ><a href='{{ home }}' class='first'><i class='fa fa-home'></i> Home</a></li>
-                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='fa fa-th-large'></i> Dashboard</a></li>
-                <li class='{% active request contact %}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
+                <li class='{{ request|active:home }}' ><a href='{{ home }}' class='first'><i class='fa fa-home'></i> Home</a></li>
+                <li class='{{ request|active_re:dashboard }}'><a href='{{ dashboard }}'><i class='fa fa-th-large'></i> Dashboard</a></li>
+                <li class='{{ request|active:contact }}'><a href='{{ contact }}'><i class='fa fa-bell-o'></i> Contact us</a></li>
                 <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'><i class='fa fa-bullhorn'></i> Report a Bug</a></li>
                 {% if request.user.is_authenticated %}
-                <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
+                <li class='{{ request|active:logout }}'><a href='{{ logout }}'>Logout</a></li>
                 {% else %}
-                <li class='{% active request login %} {% active request register %}'>
+                <li class='{{ request|active:login }}'>
                 {% if DEBUG %}
                 <a href='{{ login }}'>Login/Register</a>
                 {% else %}
