--- a/vcweb/core/templates/accounts/audit_report.html
+++ b/vcweb/core/templates/accounts/audit_report.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page %}
-<h2> Audit report of past seven days </h2><br/>
+<h2> Audit report of past seven days: {{from_date}} - {{to_date}}</h2><br/>
 <div class="row">
     <div class="col-md-2">
        <div class="panel panel-primary">
