--- a/vcweb/core/templates/accounts/audit_report.html
+++ b/vcweb/core/templates/accounts/audit_report.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block page %}
-<h2> Audit report of past seven days: {{from_date}} - {{to_date}}</h2><br/>
+<h2> Audit report for past seven days: {{from_date}} - {{to_date}}</h2><br/>
 <div class="row">
-    <div class="col-md-2">
-       <div class="panel panel-primary">
+    <div class="col-md-3">
+       <div class="panel panel-success">
           <div class="panel-heading">
             <h3 class="panel-title text-center" id="panel-title">Signups</h3>
           </div>
@@ -13,8 +13,8 @@
           </div>
         </div> 
     </div> 
-    <div class="col-md-2">
-       <div class="panel panel-primary">
+    <div class="col-md-3">
+       <div class="panel panel-success">
           <div class="panel-heading">
             <h3 class="panel-title text-center" id="panel-title">Invitations Sent</h3>
           </div>
@@ -23,10 +23,30 @@
           </div>
         </div> 
     </div>
+    <div class="col-md-3">
+       <div class="panel panel-success">
+          <div class="panel-heading">
+              <h3 class="panel-title text-center" id="panel-title">Experiments Archived</h3>
+          </div>
+          <div class="panel-body">
+            <h1 class="text-center">N/A</h1>
+          </div>
+        </div> 
+    </div>
+    <div class="col-md-3">
+       <div class="panel panel-success">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center" id="panel-title">Experiments Run</h3>
+          </div>
+          <div class="panel-body">
+            <h1 class="text-center">N/A</h1>
+          </div>
+        </div> 
+    </div>
 </div>
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title" id="panel-title">Invalid Users</h3>
             </div>
@@ -49,7 +69,7 @@
 </div>
 <div class="row"> 
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title" id="panel-title">Participants with improper permissions</h3>
             </div>
@@ -72,7 +92,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
+        <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title" id="panel-title">Experimenters with improper permissions</h3>
             </div>
