Fixing bug caused due to datatable pagination. Upgading DataTables to 1.10.5

--- a/vcweb/core/subjectpool/templates/subjectpool/experiment-session-detail.html
+++ b/vcweb/core/subjectpool/templates/subjectpool/experiment-session-detail.html
@@ -99,7 +99,7 @@
 {% endblock %}
 {% block javascript %}
     {{ block.super }}
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="//cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
         $(function(){
@@ -130,102 +130,10 @@
                 event.preventDefault();
             });
 
-            /* API method to get paging information */
-            $.fn.dataTableExt.oApi.fnPagingInfo = function ( oSettings ) {
-                return {
-                    "iStart":         oSettings._iDisplayStart,
-                    "iEnd":           oSettings.fnDisplayEnd(),
-                    "iLength":        oSettings._iDisplayLength,
-                    "iTotal":         oSettings.fnRecordsTotal(),
-                    "iFilteredTotal": oSettings.fnRecordsDisplay(),
-                    "iPage":          oSettings._iDisplayLength === -1 ?
-                        0 : Math.ceil( oSettings._iDisplayStart / oSettings._iDisplayLength ),
-                    "iTotalPages":    oSettings._iDisplayLength === -1 ?
-                        0 : Math.ceil( oSettings.fnRecordsDisplay() / oSettings._iDisplayLength )
-                };
-            };
-
-            /* Bootstrap style pagination control */
-            $.extend( $.fn.dataTableExt.oPagination, {
-                "bootstrap": {
-                    "fnInit": function( oSettings, nPaging, fnDraw ) {
-                        var oLang = oSettings.oLanguage.oPaginate;
-                        var fnClickHandler = function ( e ) {
-                            e.preventDefault();
-                            if ( oSettings.oApi._fnPageChange(oSettings, e.data.action) ) {
-                                fnDraw( oSettings );
-                            }
-                        };
-
-                        $(nPaging).addClass('pagination').append(
-                            '<ul class="pager">'+
-                                '<li class="previous disabled"><a href="#">&larr; '+oLang.sPrevious+'</a></li>'+
-                                '<li class="next disabled"><a href="#">'+oLang.sNext+' &rarr; </a></li>'+
-                            '</ul>'
-                        );
-                        var els = $('a', nPaging);
-                        $(els[0]).bind( 'click.DT', { action: "previous" }, fnClickHandler );
-                        $(els[1]).bind( 'click.DT', { action: "next" }, fnClickHandler );
-                    },
-
-                    "fnUpdate": function ( oSettings, fnDraw ) {
-                        var iListLength = 5;
-                        var oPaging = oSettings.oInstance.fnPagingInfo();
-                        var an = oSettings.aanFeatures.p;
-                        var i, ien, j, sClass, iStart, iEnd, iHalf=Math.floor(iListLength/2);
-
-                        if ( oPaging.iTotalPages < iListLength) {
-                            iStart = 1;
-                            iEnd = oPaging.iTotalPages;
-                        }
-                        else if ( oPaging.iPage <= iHalf ) {
-                            iStart = 1;
-                            iEnd = iListLength;
-                        } else if ( oPaging.iPage >= (oPaging.iTotalPages-iHalf) ) {
-                            iStart = oPaging.iTotalPages - iListLength + 1;
-                            iEnd = oPaging.iTotalPages;
-                        } else {
-                            iStart = oPaging.iPage - iHalf + 1;
-                            iEnd = iStart + iListLength - 1;
-                        }
-
-                        for ( i=0, ien=an.length ; i<ien ; i++ ) {
-                            // Remove the middle elements
-                            $('li:gt(0)', an[i]).filter(':not(:last)').remove();
-
-                            // Add the new list items and their event handlers
-                            for ( j=iStart ; j<=iEnd ; j++ ) {
-                                sClass = (j==oPaging.iPage+1) ? 'class="active"' : '';
-                                $('<li '+sClass+'><a href="#">'+j+'</a></li>')
-                                    .insertBefore( $('li:last', an[i])[0] )
-                                    .bind('click', function (e) {
-                                        e.preventDefault();
-                                        oSettings._iDisplayStart = (parseInt($('a', this).text(),10)-1) * oPaging.iLength;
-                                        fnDraw( oSettings );
-                                    } );
-                            }
-
-                            // Add / remove disabled classes from the static elements
-                            if ( oPaging.iPage === 0 ) {
-                                $('li:first', an[i]).addClass('disabled');
-                            } else {
-                                $('li:first', an[i]).removeClass('disabled');
-                            }
-
-                            if ( oPaging.iPage === oPaging.iTotalPages-1 || oPaging.iTotalPages === 0 ) {
-                                $('li:last', an[i]).addClass('disabled');
-                            } else {
-                                $('li:last', an[i]).removeClass('disabled');
-                            }
-                        }
-                    }
-                }
-            });
-
-            $('#participant-table').dataTable( {
-                "sDom": "<'pull-left'l><'pull-right'f><'clearfix'r>t<'col-md-6'i><'pull-right datatable-pager'p>",
+            oTable = $('#participant-table').dataTable( {
+                "sDom": "<'pull-right'f><'clearfix'r>t<'col-md-6'i>",
                 "sWrapper": "dataTables_wrapper",
-                "sPaginationType": "bootstrap"
+                "paging": false,
             });
 
             // SEARCH - Add the placeholder for Search and Turn it into in-line formcontrol
@@ -233,6 +141,11 @@
             search_input.attr('placeholder', 'Search');
             search_input.addClass('form-control input-sm');
             search_input.css('width', '150px');
+
+
+            $("#submit-attendance").click(function() {
+                oTable.fnFilter('');
+            });
         });
     </script>
 {% endblock %}
