--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -13,7 +13,7 @@
 {% url 'core:register' as register %}
 {% url 'core:report_issues' as issues_url %}
 {% url 'core:audit_report' as audit_report %}
-{% url 'subjectpool:experimenter_index' as subjectpool %}
+{% url 'subjectpool:subjectpool_index' as subjectpool %}
 <!DOCTYPE html>
 <html lang="en">
 {% with jquery_version="1.11.2" bootstrap_version="3.3.2" bootswatch_version="3.3.0" fontawesome_version="4.3.0" knockout_version="3.3.0" ravenjs_version="1.1.16" %}
