remove defunct about page, update csid name

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -58,7 +58,7 @@
         <p>
             The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
             (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
-            and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
+            and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for Behavior, Institutions, and the Environment</a>.
         </p>
         <p>
             Open source and education licenses have been generously provided by 
