--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -129,14 +129,14 @@
     <div class='container'>
         {% block footerlinks %}
         <ul class='nav-footer hidden-xs'>
-            <li><a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a></li>
+            <li><a href='http://csid.asu.edu'>Center for Behavior, Institutions, and the Environment</a></li>
             <li><a href='http://shesc.asu.edu'>School of Human Evolution &amp; Social Change</a></li>
             <li><a href='http://www.azregents.edu/'>&copy; 2011-{% now "Y" %} Arizona Board of Regents</a></li>
             <li>build: {{ TAG }}</li>
         </ul>
         <a style='margin-top: 15px;' class='visible-xs pull-right' href='{{home}}'><img class='logo' src='{% static "images/vcweb-logo.png" %}' width='30' height='23' alt='vcweb logo'/></a>
         <ul style='margin-top: 5px;' class='list-unstyled visible-xs'>
-            <li><a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
+            <li><a href='http://csid.asu.edu'>Center for Behavior, Institutions, and the Environment</a>
             <li><a href='http://shesc.asu.edu'>School of Human Evolution &amp; Social Change</a>
             <li><a href='http://www.azregents.edu/'>&copy; 2011-{% now "Y" %} Arizona Board of Regents</a>
         </ul>
