Adding recent login users list to audit report/email. Fix #96.

--- a/vcweb/core/templates/admin/audit_report.html
+++ b/vcweb/core/templates/admin/audit_report.html
@@ -53,10 +53,10 @@
             <div class="panel-body">
                 {% if invalid_users|length > 0 %}
                 <table class="table">
-                    <thead><tr><th>Sr.No</th><th>Username</th><th>Email</th></thead>
+                    <thead><tr><th>User PK</th><th>Username</th><th>Email</th></thead>
                     <tbody>
                     {% for user in invalid_users %}
-                        <tr><td>{{forloop.counter}}</td><td>{{ user.username }}</td><td>{{ user.email }}</td></tr>
+                        <tr><td>{{user.pk}}</td><td>{{ user.username }}</td><td>{{ user.email }}</td></tr>
                     {% endfor %}
                     </tbody>
                 </table>
@@ -76,10 +76,10 @@
             <div class="panel-body">
                 {% if participants|length > 0 %}
                 <table class="table">
-                    <thead><tr><th>Sr.No</th><th>Username</th><th>Email</th></thead>
+                    <thead><tr><th>Participant PK</th><th>Username</th><th>Email</th></thead>
                     <tbody>
                     {% for participant in participants %}
-                        <tr><td>{{forloop.counter}}</td><td>{{ participant.username }}</td><td>{{ participant.email }}</td></tr>
+                        <tr><td>{{ participant.pk }}</td><td>{{ participant.username }}</td><td>{{ participant.email }}</td></tr>
                     {% endfor %}
                     </tbody>
                 </table>
@@ -99,10 +99,10 @@
             <div class="panel-body">
                 {% if experimenters|length > 0 %}
                 <table class="table">
-                    <thead><tr><th>Sr.No</th><th>Username</th><th>Email</th></thead>
+                    <thead><tr><th>Experimenter PK</th><th>Username</th><th>Email</th></thead>
                     <tbody>
                     {% for experimenter in experimenters %}
-                        <tr><td>{{forloop.counter}}</td><td>{{ experimenter.username }}</td><td>{{ experimenter.email }}</td></tr>
+                        <tr><td>{{ experimenter.pk }}</td><td>{{ experimenter.username }}</td><td>{{ experimenter.email }}</td></tr>
                     {% endfor %}
                     </tbody>
                 </table>
@@ -122,10 +122,33 @@
             <div class="panel-body">
                 {% if institution_list|length > 0 %}
                 <table class="table">
-                    <thead><tr><th>Sr.No</th><th>Institution</th><th>Participant Count</th></thead>
+                    <thead><tr><th>Institution PK</th><th>Institution</th><th>Participant Count</th></thead>
                     <tbody>
                     {% for institution in institution_list %}
-                        <tr><td>{{forloop.counter}}</td><td>{{ institution.institution__name }}</td><td>{{ institution.total }}</td></tr>
+                        <tr><td>{{ institution.institution__pk }}</td><td>{{ institution.institution__name }}</td><td>{{ institution.total }}</td></tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                {% else %}
+                    All the experimenters have proper permissions
+                {% endif %}
+            </div> 
+        </div>
+    </div> 
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" id="panel-title">Recent User Logins</h3>
+            </div>
+            <div class="panel-body">
+                {% if recent_logins|length > 0 %}
+                <table class="table">
+                    <thead><tr><th>User PK</th><th>UserName</th><th>Date/Time</th></thead>
+                    <tbody>
+                    {% for user in recent_logins %}
+                        <tr><td>{{ user.pk }}</td><td>{{ user.username }}</td><td>{{ user.last_login }}</td></tr>
                     {% endfor %}
                     </tbody>
                 </table>
